--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
         <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="../static/css/fonts.css">
-        <link rel="stylesheet" href="./index.scss">
 
-        <script src='./index.ts' type="module"></script>
+        <script src='./index.ts' type="module" defer></script>
     </head>
     <body>
+        <!--
         <nav>
             <ul> 
                 <li><a href="./pages/auth/auth.pug"> Авторизация</a></li>
@@ -30,5 +30,7 @@
                 <li><a href="./pages/edit/edit.pug"> Редактор</a></li> 
             </ul>
         </nav>
+        -->
+        <div id="root"></div>
     </body>
 </html>
