Yeah! Components system is working!

--- a/src/index.html
+++ b/src/index.html
@@ -19,18 +19,16 @@
         <script src='./index.ts' type="module" defer></script>
     </head>
     <body>
-        <!--
         <nav>
             <ul> 
-                <li><a href="./pages/auth/auth.pug"> Авторизация</a></li>
-                <li><a href="./pages/reg/reg.pug"> Регистрация</a></li> 
-                <li><a href="./pages/profile/profile.pug"> Профиль</a></li> 
-                <li><a href="./pages/error/error.pug"> Ошибка</a></li> 
-                <li><a href="./pages/chat/chat.pug"> Чат</a></li> 
-                <li><a href="./pages/edit/edit.pug"> Редактор</a></li> 
+                <!--<li><a href="./pages/auth/auth.html"> Авторизация</a></li>
+                <li><a href="./pages/reg/reg.html"> Регистрация</a></li> 
+                <li><a href="./pages/profile/profile.html"> Профиль</a></li> 
+                <li><a href="./pages/error/error.html"> Ошибка</a></li> 
+                <li><a href="./pages/chat/chat.html"> Чат</a></li> 
+                <li><a href="./pages/edit/edit.html"> Редактор</a></li>
+                -->
             </ul>
         </nav>
-        -->
-        <div id="root"></div>
     </body>
 </html>
