--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,10 @@
         <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="../static/css/fonts.css">
+        <link rel="stylesheet" href="../static/css/simplebar.css">
 
         <script src='./index.ts' type="module" defer></script>
+        <script src="../static/js/simplebar.min.js" defer></script>
     </head>
     <body>
         <nav>
