--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
         <link rel="manifest" href="../static/site.webmanifest">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="stylesheet" href="../static/css/fonts.css">
-        <link rel="stylesheet" href="../static/css/simplebar.css">
+        <link rel="stylesheet" href="../static/css/fonts.scss">
+        <link rel="stylesheet" href="../static/css/simplebar.scss">
 
         <script src='./index.ts' type="module" defer></script>
         <script src="../static/js/simplebar.min.js" defer></script>
