--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
         <script src='./index.ts' type="module" defer></script>
         <script src="../static/js/simplebar.min.js" defer></script>
     </head>
-    <body>
+    <body id="root">
     </body>
 </html>
