--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="../static/images/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="../static/images/favicon-16x16.png">
         <link rel="manifest" href="../static/site.webmanifest">
-        <meta name="theme-color" content="#ffffff">
+        <meta name="theme-color" content="#f5f5f5">
 
         <link rel="stylesheet" href="../static/css/fonts.scss">
         <link rel="stylesheet" href="../static/css/simplebar.scss">
@@ -21,5 +21,6 @@
         <script src="../static/js/simplebar.min.js" defer></script>
     </head>
     <body id="root">
+        <noscript>You need to enable JavaScript to run this app.</noscript>
     </body>
 </html>
